tests/invalid/unsupported_expression_ifexp/main.py
def main() -> None:
    x = 1 if True else 2
